contrib/manifests/example-backend/insecure/example-backend.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-backend
  labels:
    app: example-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: example-backend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: example-backend
    spec:
      serviceAccountName: example-backend
      containers:
        - name: example-backend
          image: ghcr.io/kubeware/example-backend:latest
          command:
            - /example-backend
          args:
            - --namespace-prefix=cluster
            - --pretty-name=MangoDB
            - --consumer-scope=Namespaced
            - --oidc-issuer-client-id=$(OIDC-ISSUER-CLIENT-ID)
            - --oidc-issuer-client-secret=$(OIDC-ISSUER-CLIENT-SECRET)
            - --oidc-issuer-url=$(OIDC-ISSUER-URL)
            - --oidc-callback-url=$(OIDC-CALLBACK-URL)
            - --listen-address=0.0.0.0:443
            - --cookie-signing-key=$(COOKIE-SIGNING-KEY)
          resources:
            limits:
              cpu: '2'
              memory: 2Gi
            requests:
              cpu: '100m'
              memory: 256Mi
      volumes:
        - name: oidc-config
          secret:
            secretName: oidc-config
        - name: cookie-config
          secret:
            secretName: cookie-config
---
apiVersion: v1
kind: Service
metadata:
  name: example-backend
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      name: example-backend
      port: 443
      targetPort: 443
  selector:
    app: example-backend
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-backend
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: "mangodb.de"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: example-backend
                port:
                  number: 443
